# stamp

./: Cargo.toml  README.md  completions.zsh  readme.md
.github/workflows/: pipeline.yml  rust.yml
src/: cli.rs  main.rs
src/command/: list.rs  mod.rs  run.rs
testComponent/: ITestComponentProps.ts  TestComponent.tsx
