[package]
name = "stamp-templates"
version = "0.1.0"
authors = ["Jake Stanger <mail@jstanger.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0.2"
structopt = "0.3.14"
ansi_term = "0.12.1"
regex = "1.3.7"
handlebars_misc_helpers = "0.9.0"

[dependencies.handlebars]
version = "3.0.1"
features = ["dir_source"]