[package]
name = "stamp-templates"
version = "0.1.1"
authors = ["Jake Stanger <mail@jstanger.dev>"]
edition = "2018"
description = "A command line tool for creating one or more files from templates."
license = "MIT"
repository = "https://github.com/JakeStanger/mpd-discord-rpc"
readme = "README.md"
keywords = ["template", "handlebars", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0.2"
structopt = "0.3.14"
ansi_term = "0.12.1"
handlebars_misc_helpers = "0.9.0"

[dependencies.handlebars]
version = "3.0.1"
features = ["dir_source"]